--- a/public/assets/css/plusis.css
+++ b/public/assets/css/plusis.css
@@ -182,3 +182,18 @@ margin-bottom: 10px;
   width: 100%;
   margin-bottom:10px !important;
 }
+
+li.badge span{
+
+  padding-left:5px;
+
+
+}
+
+li.badge {
+    padding-left: 5px;
+    line-height: 1.5em;
+    font-size: 0.8em;
+    color: red !important;
+    
+}
