--- a/public/css/plusis.css
+++ b/public/css/plusis.css
@@ -74,3 +74,18 @@ background-color:#fff !important;
 }
 
 
+
+
+li.badge span{
+
+  padding-left:5px;
+
+
+}
+
+li.badge {
+    padding-left: 5px;
+    line-height: 1.5em;
+    font-size: 0.8em;
+    color: red !important;
+}
